--- a/.env
+++ b/.env
@@ -53,3 +53,5 @@ MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 SCOUT_DRIVER=meilisearch
 MEILISEARCH_HOST=http://meilisearch:7700
+
+L5_SWAGGER_CONST_HOST_LOCAL=http://localhost
